force-app/main/default/objects/Setup_Data__c/fields/Job_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Job_Frequency__c</fullName>
    <label>Job Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>