force-app/main/default/objects/Setup_Data__c/fields/Job_Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Hour__c</fullName>
    <label>Job Start Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>