force-app/main/default/objects/Setup_Data__c/fields/Optional_Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>Optional_Steps_Completed__c</fullName>
    <label>Optional Steps Completed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>