force-app/main/default/objects/Setup_Data__c/fields/SFDC_Auth_Step_Completed__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Auth_Step_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFDC Auth Step Completed</label>
    <type>Checkbox</type>
</CustomField>